--- a/src/components/FormImage/_index.scss
+++ b/src/components/FormImage/_index.scss
@@ -1,6 +1,7 @@
 .form-image {
     position: relative;
-    @include border-radius;
+    display: block;
+    @include border-radius($input-border-radius);
     border: $input-border-width solid $input-border-color;
     width: 4rem;
     height: 4rem;
@@ -13,13 +14,13 @@
 
     .form-image-btn-edit {
         position: absolute;
-        top: .3rem;
-        right: .3rem;
+        top: $input-padding-y;
+        right: $input-padding-y;
     }
 }
 
 .form-image-btn-edit {
-    @include border-radius;
+    @include border-radius($btn-border-radius-sm);
     width: 1rem;
     height: 1rem;
     background-color: rgba($dark, .8);
