Use variables instead of hardcoded values

--- a/src/components/FormImage/_index.scss
+++ b/src/components/FormImage/_index.scss
@@ -1,31 +1,31 @@
 .form-image {
     position: relative;
     display: block;
-    @include border-radius($input-border-radius);
-    border: $input-border-width solid $input-border-color;
-    width: 4rem;
-    height: 4rem;
+    @include border-radius($form-image-border-radius);
+    border: $form-image-border-width solid $form-image-border-color;
+    width: $form-image-width;
+    height: $form-image-height;
     cursor: pointer;
-    background-color: $input-bg;
-    background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='#{$input-border-color}' viewBox='0 0 16 16' width='16' height='16'><path d='M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z'/><path d='M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z'/></svg>"));
+    background-color: $form-image-background-color;
+    background-image: escape-svg($form-image-upload-icon);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 1rem;
+    background-size: $form-image-upload-icon-size;
 
     .form-image-btn-edit {
         position: absolute;
-        top: $input-padding-y;
-        right: $input-padding-y;
+        top: $form-image-btn-edit-top;
+        right: $form-image-btn-edit-right;
     }
 }
 
 .form-image-btn-edit {
-    @include border-radius($btn-border-radius-sm);
-    width: 1rem;
-    height: 1rem;
-    background-color: rgba($dark, .8);
-    background-image: escape-svg(url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='#{$white}' viewBox='0 0 16 16'><path d='M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z'/></svg>"));
+    @include border-radius($form-image-btn-edit-border-radius);
+    width: $form-image-btn-edit-width;
+    height: $form-image-btn-edit-height;
+    background-color: $form-image-btn-edit-bg-color;
+    background-image: escape-svg($form-image-btn-edit-icon);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: .5rem;
+    background-size: $form-image-btn-edit-icon-size;
 }
