--- a/src/_index.scss
+++ b/src/_index.scss
@@ -2,3 +2,4 @@
 @import './components/ButtonState';
 @import './components/FormImage';
 @import './components/FormPills';
+@import './components/InputPassword';
