--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -36,7 +36,7 @@ $form-image-btn-edit-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org
 $form-image-btn-edit-icon-size: .5rem !default;
 
 
-// Form image
+// Table image
 //
 
 $table-sort-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='#{$table-color}' viewBox='0 0 10 6' width='1rem' height='1rem'><path d='m9.354 4.822-.708.707L5 1.883 1.354 5.529l-.708-.707L5 .47l4.354 4.353Z'/></svg>");
