--- a/src/components/Table/_index.scss
+++ b/src/components/Table/_index.scss
@@ -1,20 +1,19 @@
 .table {
-    th.sortable {
+    &-heading-sortable {
         cursor: pointer;
 
-        @each $sort in ['asc', 'desc'] {
-            &.#{$sort}::after {
-                background-image: escape-svg($table-sort-icon);
-                content: '';
-                height: 1rem;
-                margin: 0 0.5rem;
-                position: absolute;
-                width: 1rem;
+        &&-asc::after {
+            background-image: escape-svg($table-sort-icon);
+            content: '';
+            height: 1rem;
+            margin: 0 0.5rem;
+            position: absolute;
+            width: 1rem;
+        }
 
-                @if($sort == 'desc') {
-                    transform: rotate(180deg);
-                }
-            }
+        &&-desc::after {
+            @extend .table-heading-sortable-asc;
+            transform: rotate(180deg);
         }
     }
 }
