fix(formpills): input background and color

--- a/src/components/FormPills/_index.scss
+++ b/src/components/FormPills/_index.scss
@@ -24,9 +24,11 @@
 }
 
 .form-pill-input {
-    padding: 0;
+    background: transparent;
     border-width: 0;
+    color: $input-color;
     outline: 0;
+    padding: 0;
 }
 
 .form-pill-input-sizer {
