fix(Table): sort icon styling

--- a/src/components/Table/_index.scss
+++ b/src/components/Table/_index.scss
@@ -2,13 +2,17 @@
     .table-heading-sortable {
         cursor: pointer;
 
+        &::after {
+            vertical-align: middle;
+            display: inline-block;
+            content: '';
+            height: 1em;
+            margin: 0 .5rem;
+            width: 1em;
+        }
+
         &.table-heading-sortable-asc::after {
             background-image: escape-svg($table-sort-icon);
-            content: '';
-            height: 1rem;
-            margin: 0 0.5rem;
-            position: absolute;
-            width: 1rem;
         }
 
         &.table-heading-sortable-desc::after {
