--- a/src/components/InputPassword/_index.scss
+++ b/src/components/InputPassword/_index.scss
@@ -1,3 +1,23 @@
 .input-password-icon {
     vertical-align: $spinner-vertical-align;
 }
+
+.input-password-feedback {
+    list-style: none;
+    margin-top: $form-feedback-margin-top;
+    margin-bottom: 0;
+    padding-left: 0;
+    
+    @each $state, $data in $form-validation-states {
+        .is-#{$state} {
+            position: relative;
+            padding-left: calc(1em + .5rem);
+            background-repeat: no-repeat;
+            background-position: 0;
+            background-size: 1em;
+
+            color: map-get($data, 'color');
+            background-image: escape-svg(map-get($data, 'icon'));
+        }
+    }
+}
